# fine

./: .gitignore  CLAUDE.md  README.md  kodeklip-prd.txt  kodeklip-refined-tasks.md  pyproject.toml  status.md
.taskmaster/: config.json
.taskmaster/tasks/: tasks.json
src/kodeklip/: __init__.py  database.py  git_manager.py  main.py  models.py  repository_manager.py  schema.py  search.py  tui.py
tests/: __init__.py  test_cli.py  test_database.py  test_git_manager.py  test_git_manager_advanced.py  test_search.py  test_tui.py
